메모 버튼 기본 기능구현(저장,단축키)

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </button>
           </div>
 
-          <textarea class="memo_contents" name="comments" cols="20" rows="4" placeholder="ssasdss">
+          <textarea class="js-Memo_contents" name="comments" cols="20" rows="6" placeholder="ssasdss">
 
           </textarea>
       </div>
