테이블 색변경 및 병합기능 추가

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     
 
    
-
+    <script src="Javascript/variable.js"></script>
     <script src="Javascript/todo.js"></script>
     <script src="Javascript/clock.js"></script>
     <script src="Javascript/memo.js"></script>
