--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
           </div>
 
           <textarea class="js-Memo_contents" name="comments" cols="20" rows="6" placeholder="ssasdss">
-
+       
           </textarea>
           <div>
             <span class= "js-Memo_Ref" >* Ctrl+Enter : Run & Save</span>
@@ -857,6 +857,7 @@
 
     <!--Detail Scripit-->
     <script src="Javascript/Detail/detail_frame.js"></script>
+    <script src="Javascript/Detail/md.js"></script>
     <script 
       src="https://kit.fontawesome.com/3dbd9a16b0.js" 
       crossorigin="anonymous">
