--- a/index.html
+++ b/index.html
@@ -847,7 +847,8 @@
       </div>
 
       <div class="js-Worktime_checker__Summary">
-        <span>Summary</span>
+        <span class="Summary_title">Summary</span>
+        <canvas class="Summary_bar-chart" width="300" height="230"></canvas>
       </div>
     </div>
     <!-------------------------------------------------------------------------->
@@ -873,8 +874,11 @@
   <script src="Javascript/memo.js"></script>
   <script src="Javascript/schedule.js"></script>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script src="Javascript/Worktime_checker.js"></script>
+
+  <script src="Javascript/Detail/work_chart.js"></script>
+
 
   <!--공통 속성 정의-->
   <script src="Javascript/body.js"></script>
